More Provider refactoring & cleanup